<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_three_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three_user"
            android:background="@null"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_four_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four_user"
            android:background="@null"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_five_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_user"
            android:background="@null"
            style="?attr/materialButtonOutlinedStyle"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/ll_cv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_A"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#80000000"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_A"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_B"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#80000000"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_C"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#80000000"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_C"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_D"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#80000000"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_D"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_E"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/light_gray"
            app:cardElevation="0dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#80000000"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_E"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_darkgray"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardElevation="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
